made change to css to avoid overlapping of offerings

--- a/css/style.css
+++ b/css/style.css
@@ -746,6 +746,7 @@ a:focus {
 .class .class-wrap {
     position: relative;
     width: 100%;
+    z-index: 1;
 }
 
 .class .class-img {
@@ -766,6 +767,7 @@ a:focus {
     border-bottom: 1px solid rgba(0, 0, 0, .07);
     border-left: 1px solid rgba(0, 0, 0, .07);
     border-top: 1px solid rgba(0, 0, 0, .07);
+    z-index: 1;
 }
 
 .class .class-text h2 {
